simple-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  labels:
    app: myapp
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: myapp
          image: fabricio211/person-service:1.0.3
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/readiness
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/liveness
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 5
          startupProbe:
            httpGet:
              port: 8080
              path: /actuator/info
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 5
            successThreshold: 1 #quantos sucessos para marcar o pod como pronto
          resources:
            requests:
              memory: "150Mi"
              cpu: "100m"
            limits:
              memory: "500Mi"
              cpu: "200m"
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /etc/config
              name: appname
      volumes:
        - name: appname
          configMap:
            name: appname
            items:
              - key: application.yml
                path: application.yml
