simple-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  namespace: dev
  labels:
    name: myapp
spec:
  containers:
  - name: myapp
    image: fabricio211/person-service:1.0.1
    readinessProbe:
      httpGet:
        port: 8080
        path: /actuator/health/readiness
      initialDelaySeconds: 5
      periodSeconds: 5
    livenessProbe:
      httpGet:
        port: 8080
        path: /actuator/health/liveness
      initialDelaySeconds: 5
      periodSeconds: 5
      failureThreshold: 5
    startupProbe:
      httpGet:
        port: 8080
        path: /actuator/info
      initialDelaySeconds: 5
      periodSeconds: 5
      failureThreshold: 5
      successThreshold: 1 #quantos sucessos para marcar o pod como pronto
    resources:
      requests:
        memory: "50Mi"
        cpu: "100m"
      limits:
        memory: "200Mi"
        cpu: "500m"
    ports:
      - containerPort: 8080
