simple-service-loadbalance.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aw...
spec:
  type: LoadBalancer
  selector:
    app: myapp
  ports:
  - port: 8080
    protocol: TCP
    name: http #nome apenas
    targetPort: 8080
