simple-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  type: NodePort
  selector:
    app: myapp
  ports:
  - port: 8080
    name: http #nome apenas
    targetPort: 8080
